# reasongraph

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
data/examples/: ai_provider_selection.json  pricing_strategy.json  vendor_selection.json
docs/: architecture.md  mkdocs.yml
docs/docs/: index.md
neo4j/: constraints.cypher
reasongraph/: __init__.py  dataset.py  features.py  plots.py
reasongraph/backend/: main.py
reasongraph/backend/api/: routes_extraction.py  routes_graph.py  routes_positions.py  routes_projects.py  routes_settings.py
reasongraph/backend/core/: key_vault.py  settings.py
reasongraph/backend/db/: init_db.py  models.py  session.py
reasongraph/backend/graph/: neo4j_client.py  read_graph.py  write_graph.py
reasongraph/backend/llm/: model_registry.py  openai_extraction.py
reasongraph/backend/schemas/: extraction.py  issue.py  position.py  project.py  provider.py  stakeholder.py
reasongraph/backend/services/: extraction_service.py  position_service.py  project_service.py  provider_service.py
reasongraph/modeling/: predict.py  train.py
scripts/: init_neo4j.py  seed_examples.py
tests/: test_data.py  test_extraction_service.py  test_graph_read.py  test_graph_write.py  test_openai_extraction.py  test_provider_settings.py
